@@ -3,6 +3,8 @@ Version 0.5.0
 
 COCKPIT
 
+- Login credentials can now be stored in S3.
+- Added a dialog for configuring Bucket Logging.
 - Remembered login credentials are automatically updated to the new PBE-based encryption files.
 - Third-party buckets can be added without first logging in.
 - User can cancel the listing of objects in large buckets.
